mainApp/finances/buget.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

:root {
       --strong:#E63946;
       --light:#F1FAEE;
       --light-blue:#A8DADC;
       --medium-blue:#457B9D;
       --dark-blue:#1D3557;
}

section.app-box {
    display: flex;
    justify-content: start;
    flex-direction: row;
    justify-content: space-around;
}

main.finances-budget-app {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    border-radius: 30px;
    padding: 2rem;
    margin-top: 6rem;
    margin-left: 2rem;
    width: 18rem;
    border: 0.2rem solid var(--border-color);
    background:var(--medium-blue);
    color: var(--light);
    box-shadow: 2px 2px 2px 2px var(--light-blue);
    animation: fadeIn 1.5s ease-in;
}

main.income-register{
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    border-radius: 30px;
    padding: 2rem;
    margin-top: 6rem;
    margin-left: 3rem;
    width: 20rem;
    max-width: 25%;
    border: 0.2rem solid var(--border-color);
    background:var(--light-blue);
    color: var(--dark-blue);
    box-shadow: 2px 2px 2px 2px var(--medium-blue);
    animation: fadeIn 1.5s ease-in;
}

main.expenses-register{
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    border-radius: 30px;
    padding: 2rem;
    margin-top: 6rem;
    margin-left: 3rem;
    width: 23rem;
    max-width: 30%;
    border: 0.2rem solid var(--border-color);
    background:var(--light-blue);
    color: var(--dark-blue);
    box-shadow: 2px 2px 2px 2px var(--medium-blue);
    animation: fadeIn 1.5s ease-in;
}


h1,
h2,
.income-types,
.expenses-types{
    font-size: 1.2rem;
    font-weight: bold;
    margin-left: 0.9rem;
    margin-bottom: 1.5rem;
    animation: moveLeftAndRight 1.5s ease-in-out;
}

.label-inputs{
    font-weight: bold;
    padding-left: 1rem;
}

.inputs {
    display: flex;
    align-self: flex-start;
    margin: 1rem;
    padding: 0.1rem;
    border-radius: 5px;
    font-weight: bold;
}

.button{
    font: inherit;
    font-weight: bold;
    border-radius: 5px;
    border: 3px solid var(--border-color);
    background:var(--light);
    color: var(--dark-blue);
    padding: 0.5rem;
    margin-left: 0.9rem;;
    cursor: pointer;
    align-self: flex-start;
}

.button:hover,
.button:active {
    background:var(--strong);
    color: var(--light);
    border: 3px solid var(--background-buget);
}

#income-table-container, 
#expense-table-container{
    display: none;
}

.income-table,
.expense-table {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
    border-radius: 15px;
    padding: 1rem;
    margin-top: 0.5rem;
    margin-left: 2rem;
    margin-bottom: 1rem;
    width: 35rem;
    max-width: 45%;
    border: 0.1rem solid var(--border-color);
    background:var(--light-blue);
    color: var(--dark-blue);
    box-shadow: 2px 2px 2px 2px #ccc;
    animation: fadeIn 1.5s ease-in;
    vertical-align: middle;
}

th, td{
    padding: 0 1rem;
    text-align: center;
}

.tables{
    display: flex;
    flex-direction:row;
    justify-content: space-around;
}

@media (max-width: 77rem) {
    section.app-box {
        flex-direction: row;
        justify-content: space-around;
        flex-wrap: wrap; 
    }

    main.finaces-budget-app,
    main.income-register,
    main.expenses-register {
        flex-direction: column;
        flex-wrap: wrap;
        align-self: self-start;
        min-width: 19rem;
        width: 100%;
    }
}

@keyframes fadeIn {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }

@keyframes moveLeftAndRight {
    0%, 100% {
        transform: translateX(0);
    }
    50% {
        transform: translateX(2rem);
    }
}

